--- a/.gitattributes
+++ b/.gitattributes
@@ -504,6 +504,7 @@
 3rdparty/libapogee/conf/F16HS1B.txt -text
 3rdparty/libapogee/conf/F29050S.txt -text
 3rdparty/libapogee/conf/F29050V.txt -text
+3rdparty/libapogee/conf/F3041V.txt -text
 3rdparty/libapogee/conf/F30V.txt -text
 3rdparty/libapogee/conf/F30VAIMO.txt -text
 3rdparty/libapogee/conf/F4000V.txt -text
@@ -511,15 +512,23 @@
 3rdparty/libapogee/conf/F47V12.txt -text
 3rdparty/libapogee/conf/F6V.txt -text
 3rdparty/libapogee/conf/F77V.txt -text
+3rdparty/libapogee/conf/FA674R.txt -text
 3rdparty/libapogee/conf/FA694R.txt -text
+3rdparty/libapogee/conf/FA814R.txt -text
+3rdparty/libapogee/conf/FAD674R.txt -text
+3rdparty/libapogee/conf/FAD694R.txt -text
+3rdparty/libapogee/conf/FAD814R.txt -text
 3rdparty/libapogee/conf/FCG16070.txt -text
 3rdparty/libapogee/conf/FCG16M.txt -text
 3rdparty/libapogee/conf/FCG285.txt -text
+3rdparty/libapogee/conf/FCG285A.txt -text
 3rdparty/libapogee/conf/FCG42.txt -text
 3rdparty/libapogee/conf/FCG42S.txt -text
 3rdparty/libapogee/conf/FCG6.txt -text
 3rdparty/libapogee/conf/FCG77.txt -text
+3rdparty/libapogee/conf/FCG77REGA.txt -text
 3rdparty/libapogee/conf/FCG77S.txt -text
+3rdparty/libapogee/conf/FCG77SREGA.txt -text
 3rdparty/libapogee/conf/FCG8300.txt -text
 3rdparty/libapogee/conf/FCG8300S.txt -text
 3rdparty/libapogee/conf/FEHR1AQ.txt -text
@@ -546,6 +555,8 @@
 3rdparty/libapogee/conf/FF47R.txt -text
 3rdparty/libapogee/conf/FF47R12.txt -text
 3rdparty/libapogee/conf/FF47S12.txt -text
+3rdparty/libapogee/conf/FF50100RD.txt -text
+3rdparty/libapogee/conf/FF50100S.txt -text
 3rdparty/libapogee/conf/FF6R.txt -text
 3rdparty/libapogee/conf/FF6RA.txt -text
 3rdparty/libapogee/conf/FF6S.txt -text
@@ -571,6 +582,7 @@
 3rdparty/libapogee/conf/FKHR5C.txt -text
 3rdparty/libapogee/conf/FKHR6A.txt -text
 3rdparty/libapogee/conf/FKHR6B.txt -text
+3rdparty/libapogee/conf/FKHR6C.txt -text
 3rdparty/libapogee/conf/FKHS1.txt -text
 3rdparty/libapogee/conf/FKHS1A.txt -text
 3rdparty/libapogee/conf/FKHS1B.txt -text
@@ -588,6 +600,7 @@
 3rdparty/libapogee/conf/FKV4.txt -text
 3rdparty/libapogee/conf/FKV5.txt -text
 3rdparty/libapogee/conf/FKV6.txt -text
+3rdparty/libapogee/conf/FKV6B.txt -text
 3rdparty/libapogee/conf/FM12HC.txt -text
 3rdparty/libapogee/conf/FM12HR.txt -text
 3rdparty/libapogee/conf/FM12HS.txt -text
@@ -595,8 +608,12 @@
 3rdparty/libapogee/conf/FM16HS1.txt -text
 3rdparty/libapogee/conf/FR2.txt -text
 3rdparty/libapogee/conf/FR230.txt -text
+3rdparty/libapogee/conf/FR230b.txt -text
 3rdparty/libapogee/conf/FR2F.txt -text
+3rdparty/libapogee/conf/FR3041.txt -text
 3rdparty/libapogee/conf/FS230.txt -text
+3rdparty/libapogee/conf/FS230b.txt -text
+3rdparty/libapogee/conf/FS3041.txt -text
 3rdparty/libapogee/conf/FV1.txt -text
 3rdparty/libapogee/conf/FV1B.txt -text
 3rdparty/libapogee/conf/H12HC.txt -text
@@ -736,6 +753,7 @@
 3rdparty/libapogee/conf/MV1nimo.txt -text
 3rdparty/libapogee/conf/MV2.txt -text
 3rdparty/libapogee/conf/MV230.txt -text
+3rdparty/libapogee/conf/MV230b.txt -text
 3rdparty/libapogee/conf/MV230t.txt -text
 3rdparty/libapogee/conf/MV2B.txt -text
 3rdparty/libapogee/conf/MV2C.txt -text
@@ -745,22 +763,34 @@
 3rdparty/libapogee/conf/MV4B.txt -text
 3rdparty/libapogee/conf/MV7.txt -text
 3rdparty/libapogee/conf/MV7i.txt -text
+3rdparty/libapogee/conf/NA674R.txt -text
 3rdparty/libapogee/conf/NA694R.txt -text
+3rdparty/libapogee/conf/NA814R.txt -text
+3rdparty/libapogee/conf/NAD674R.txt -text
+3rdparty/libapogee/conf/NAD694R.txt -text
+3rdparty/libapogee/conf/NAD814R.txt -text
 3rdparty/libapogee/conf/NCG16.txt -text
 3rdparty/libapogee/conf/NCG16070.txt -text
 3rdparty/libapogee/conf/NCG16070S.txt -text
 3rdparty/libapogee/conf/NCG16M.txt -text
 3rdparty/libapogee/conf/NCG285.txt -text
+3rdparty/libapogee/conf/NCG285A.txt -text
 3rdparty/libapogee/conf/NCG285S.txt -text
+3rdparty/libapogee/conf/NCG285SA.txt -text
 3rdparty/libapogee/conf/NCG42.txt -text
 3rdparty/libapogee/conf/NCG42S.txt -text
 3rdparty/libapogee/conf/NCG47.txt -text
 3rdparty/libapogee/conf/NCG6.txt -text
 3rdparty/libapogee/conf/NCG77.txt -text
+3rdparty/libapogee/conf/NCG77REGA.txt -text
 3rdparty/libapogee/conf/NCG77S.txt -text
+3rdparty/libapogee/conf/NCG77SREGA.txt -text
 3rdparty/libapogee/conf/NCG77V.txt -text
+3rdparty/libapogee/conf/NCG77VREGA.txt -text
+3rdparty/libapogee/conf/NCG8050S.txt -text
 3rdparty/libapogee/conf/NCG8300.txt -text
 3rdparty/libapogee/conf/NCG8300S.txt -text
+3rdparty/libapogee/conf/NCG9S.txt -text
 3rdparty/libapogee/conf/NF10140S.txt -text
 3rdparty/libapogee/conf/NF1109R.txt -text
 3rdparty/libapogee/conf/NF16000R.txt -text
@@ -773,9 +803,12 @@
 3rdparty/libapogee/conf/NF32S.txt -text
 3rdparty/libapogee/conf/NF4000R.txt -text
 3rdparty/libapogee/conf/NF4000S.txt -text
+3rdparty/libapogee/conf/NF42R.txt -text
 3rdparty/libapogee/conf/NF47R.txt -text
 3rdparty/libapogee/conf/NF47R12.txt -text
 3rdparty/libapogee/conf/NF47S12.txt -text
+3rdparty/libapogee/conf/NF50100RD.txt -text
+3rdparty/libapogee/conf/NF50100S.txt -text
 3rdparty/libapogee/conf/NF6R.txt -text
 3rdparty/libapogee/conf/NF6RA.txt -text
 3rdparty/libapogee/conf/NF6S.txt -text
@@ -786,9 +819,14 @@
 3rdparty/libapogee/conf/NF9R.txt -text
 3rdparty/libapogee/conf/NF9S.txt -text
 3rdparty/libapogee/conf/NR230.txt -text
+3rdparty/libapogee/conf/NR230b.txt -text
+3rdparty/libapogee/conf/NR3041.txt -text
 3rdparty/libapogee/conf/NS230.txt -text
+3rdparty/libapogee/conf/NS230b.txt -text
+3rdparty/libapogee/conf/NS3041.txt -text
 3rdparty/libapogee/conf/NoOpH.txt -text
 3rdparty/libapogee/conf/NoOpV.txt -text
+3rdparty/libapogee/conf/VF50100.txt -text
 3rdparty/libapogee/conf/XAV1.txt -text
 3rdparty/libapogee/conf/apnmatrix.txt -text
 3rdparty/libapogee/doc.h -text
