Add initial skeleton for focus lynx focuser, nothing working yet

--- a/.gitattributes
+++ b/.gitattributes
@@ -1294,6 +1294,8 @@ libindi/drivers/filter_wheel/fli_wheel.c -text
 libindi/drivers/filter_wheel/trutech_wheel.c -text
 libindi/drivers/focuser/focus_simulator.cpp -text
 libindi/drivers/focuser/focus_simulator.h -text
+libindi/drivers/focuser/focuslynx.cpp -text
+libindi/drivers/focuser/focuslynx.h -text
 libindi/drivers/focuser/indi_tcfs_sk.xml -text
 libindi/drivers/focuser/moonlite.cpp -text
 libindi/drivers/focuser/moonlite.h -text
