--- a/.gitattributes
+++ b/.gitattributes
@@ -1102,6 +1102,12 @@ debian/indi-dsi/copyright -text
 debian/indi-dsi/indi-dsi.install -text
 debian/indi-dsi/rules -text
 debian/indi-dsi/source/format -text
+debian/indi-duino/changelog -text
+debian/indi-duino/compat -text
+debian/indi-duino/control -text
+debian/indi-duino/copyright -text
+debian/indi-duino/indi-duino.install -text
+debian/indi-duino/rules -text
 debian/indi-eqmod/changelog -text
 debian/indi-eqmod/compat -text
 debian/indi-eqmod/control -text
