--- a/.gitattributes
+++ b/.gitattributes
@@ -49,11 +49,11 @@
 3rdparty/indi-asicam/CMakeLists.txt -text
 3rdparty/indi-asicam/COPYING.LGPL -text
 3rdparty/indi-asicam/README.md -text
-3rdparty/indi-asicam/armhf/libASICamera2.bin -text
 3rdparty/indi-asicam/armv5/libASICamera2.bin -text
 3rdparty/indi-asicam/armv6/libASICamera2.bin -text
 3rdparty/indi-asicam/asi_ccd.cpp -text
 3rdparty/indi-asicam/asi_ccd.h -text
+3rdparty/indi-asicam/config.h.cmake -text
 3rdparty/indi-asicam/indi_asiccd.xml -text
 3rdparty/indi-asicam/mac32/libASICamera2.bin -text
 3rdparty/indi-asicam/mac64/libASICamera2.bin -text
