Adding time and location capabilities since scopes diff greatly in what they support. Adding verbose debugging to lx200 driver based on INDI::Logger. Migrated LX200Basic to use INDI::Telescope

--- a/.gitattributes
+++ b/.gitattributes
@@ -1354,7 +1354,7 @@ libindi/drivers/telescope/lx200basic.cpp -text
 libindi/drivers/telescope/lx200basic.h -text
 libindi/drivers/telescope/lx200classic.cpp -text
 libindi/drivers/telescope/lx200classic.h -text
-libindi/drivers/telescope/lx200driver.c -text
+libindi/drivers/telescope/lx200driver.cpp -text
 libindi/drivers/telescope/lx200driver.h -text
 libindi/drivers/telescope/lx200fs2.cpp -text
 libindi/drivers/telescope/lx200fs2.h -text
