--- a/.gitattributes
+++ b/.gitattributes
@@ -248,6 +248,20 @@
 3rdparty/indi-maxdomeii/maxdomeii.h -text
 3rdparty/indi-maxdomeii/maxdomeiidriver.c -text
 3rdparty/indi-maxdomeii/maxdomeiidriver.h -text
+3rdparty/indi-mi/99-miccd.rules -text
+3rdparty/indi-mi/AUTHORS -text
+3rdparty/indi-mi/CMakeLists.txt -text
+3rdparty/indi-mi/INSTALL -text
+3rdparty/indi-mi/README -text
+3rdparty/indi-mi/config.h.cmake -text
+3rdparty/indi-mi/indi_miccd.xml -text
+3rdparty/indi-mi/libmiccd32.bin -text
+3rdparty/indi-mi/libmiccd64.bin -text
+3rdparty/indi-mi/libmiccdarmv5.bin -text
+3rdparty/indi-mi/libmiccdarmv6.bin -text
+3rdparty/indi-mi/mi_ccd.cpp -text
+3rdparty/indi-mi/mi_ccd.h -text
+3rdparty/indi-mi/miccd.h -text
 3rdparty/indi-nexstarevo/CMakeLists.txt -text
 3rdparty/indi-nexstarevo/NexStarAUXScope.cpp -text
 3rdparty/indi-nexstarevo/NexStarAUXScope.h -text
