--- a/.gitattributes
+++ b/.gitattributes
@@ -1560,6 +1560,8 @@ libindi/libs/webcam/v4l2_decode/v4l2_decode.cpp -text
 libindi/libs/webcam/v4l2_decode/v4l2_decode.h -text
 libindi/libs/webcam/v4l2_record/ser_recorder.cpp -text
 libindi/libs/webcam/v4l2_record/ser_recorder.h -text
+libindi/libs/webcam/v4l2_record/stream_recorder.cpp -text
+libindi/libs/webcam/v4l2_record/stream_recorder.h -text
 libindi/libs/webcam/v4l2_record/v4l2_record.cpp -text
 libindi/libs/webcam/v4l2_record/v4l2_record.h -text
 libindi/libs/webcam/vcvt.h -text
