--- a/.gitattributes
+++ b/.gitattributes
@@ -1331,6 +1331,8 @@ libindi/drivers/focuser/focus_simulator.cpp -text
 libindi/drivers/focuser/focus_simulator.h -text
 libindi/drivers/focuser/focuslynx.cpp -text
 libindi/drivers/focuser/focuslynx.h -text
+libindi/drivers/focuser/focuslynxbase.cpp -text
+libindi/drivers/focuser/focuslynxbase.h -text
 libindi/drivers/focuser/indi_tcfs_sk.xml -text
 libindi/drivers/focuser/moonlite.cpp -text
 libindi/drivers/focuser/moonlite.h -text
