NSEvo: Add debian packaging for nexstarevo.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1164,6 +1164,11 @@ debian/indi-maxdomeii/compat -text
 debian/indi-maxdomeii/control -text
 debian/indi-maxdomeii/copyright -text
 debian/indi-maxdomeii/rules -text
+debian/indi-nexstarevo/changelog -text
+debian/indi-nexstarevo/compat -text
+debian/indi-nexstarevo/control -text
+debian/indi-nexstarevo/copyright -text
+debian/indi-nexstarevo/rules -text
 debian/indi-qhy/changelog -text
 debian/indi-qhy/compat -text
 debian/indi-qhy/control -text
