--- a/.gitattributes
+++ b/.gitattributes
@@ -1130,12 +1130,14 @@ debian/indi-duino/control -text
 debian/indi-duino/copyright -text
 debian/indi-duino/indi-duino.install -text
 debian/indi-duino/rules -text
+debian/indi-duino/source/format -text
 debian/indi-eqmod/changelog -text
 debian/indi-eqmod/compat -text
 debian/indi-eqmod/control -text
 debian/indi-eqmod/copyright -text
 debian/indi-eqmod/indi-eqmod.install -text
 debian/indi-eqmod/rules -text
+debian/indi-eqmod/source/format -text
 debian/indi-eqmod/watch -text
 debian/indi-ffmv/changelog -text
 debian/indi-ffmv/compat -text
@@ -1165,11 +1167,13 @@ debian/indi-gphoto/control -text
 debian/indi-gphoto/copyright -text
 debian/indi-gphoto/indi-gphoto.install -text
 debian/indi-gphoto/rules -text
+debian/indi-gphoto/source/format -text
 debian/indi-gpsd/changelog -text
 debian/indi-gpsd/compat -text
 debian/indi-gpsd/control -text
 debian/indi-gpsd/copyright -text
 debian/indi-gpsd/rules -text
+debian/indi-gpsd/source/format -text
 debian/indi-maxdomeii/changelog -text
 debian/indi-maxdomeii/compat -text
 debian/indi-maxdomeii/control -text
@@ -1182,6 +1186,7 @@ debian/indi-nexstarevo/compat -text
 debian/indi-nexstarevo/control -text
 debian/indi-nexstarevo/copyright -text
 debian/indi-nexstarevo/rules -text
+debian/indi-nexstarevo/source/format -text
 debian/indi-qhy/changelog -text
 debian/indi-qhy/compat -text
 debian/indi-qhy/control -text
@@ -1235,6 +1240,7 @@ debian/libapogee/libapogee3.dirs -text
 debian/libapogee/libapogee3.install -text
 debian/libapogee/libapogee3.links -text
 debian/libapogee/rules -text
+debian/libapogee/source/format -text
 debian/libfishcamp/changelog -text
 debian/libfishcamp/compat -text
 debian/libfishcamp/control -text
@@ -1242,6 +1248,7 @@ debian/libfishcamp/copyright -text
 debian/libfishcamp/libfishcamp-dev.install -text
 debian/libfishcamp/libfishcamp.install -text
 debian/libfishcamp/rules -text
+debian/libfishcamp/source/format -text
 debian/libfishcamp/watch -text
 debian/libfli/changelog -text
 debian/libfli/compat -text
@@ -1256,6 +1263,7 @@ debian/libfli/libfli1.links -text
 debian/libfli/postinst.ex -text
 debian/libfli/postrm.ex -text
 debian/libfli/rules -text
+debian/libfli/source/format -text
 debian/libindi-all/changelog -text
 debian/libindi-all/compat -text
 debian/libindi-all/control -text
@@ -1280,6 +1288,7 @@ debian/libqhy/control -text
 debian/libqhy/copyright -text
 debian/libqhy/libqhy.links -text
 debian/libqhy/rules -text
+debian/libqhy/source/format -text
 debian/libqsi/changelog -text
 debian/libqsi/compat -text
 debian/libqsi/control -text
@@ -1287,6 +1296,7 @@ debian/libqsi/copyright -text
 debian/libqsi/libqsi-dev.install -text
 debian/libqsi/libqsi7.install -text
 debian/libqsi/rules -text
+debian/libqsi/source/format -text
 debian/libqsi/watch -text
 debian/sbig/changelog -text
 debian/sbig/compat -text
@@ -1294,6 +1304,7 @@ debian/sbig/control -text
 debian/sbig/copyright -text
 debian/sbig/libsbigudrv2.links -text
 debian/sbig/rules -text
+debian/sbig/source/format -text
 libindi/.cproject -text
 libindi/.project -text
 libindi/AUTHORS -text
