--- a/.gitattributes
+++ b/.gitattributes
@@ -1641,5 +1641,6 @@ macosx/INDI[!!-~]Server/en.lproj/Credits.rtf -text
 macosx/INDI[!!-~]Server/en.lproj/InfoPlist.strings -text
 macosx/INDI[!!-~]Server/en.lproj/MainMenu.xib -text
 macosx/INDI[!!-~]Server/indiserver-Info.plist -text
+macosx/INDI[!!-~]Server/libgsl.a -text
 macosx/INDI[!!-~]Server/main.m -text
 macosx/README.txt -text
