Complete re-write of temma driver

--- a/.gitattributes
+++ b/.gitattributes
@@ -1443,7 +1443,7 @@ libindi/drivers/telescope/synscanmount.cpp -text
 libindi/drivers/telescope/synscanmount.h -text
 libindi/drivers/telescope/telescope_simulator.cpp -text
 libindi/drivers/telescope/telescope_simulator.h -text
-libindi/drivers/telescope/temmadriver.c -text
+libindi/drivers/telescope/temmadriver.cpp -text
 libindi/drivers/telescope/temmadriver.h -text
 libindi/drivers/video/indi_v4l2driver.cpp -text
 libindi/drivers/video/stv.c -text
