NSE: correct interaction of park-slew-track. Example GPS emulator script.

--- a/.gitattributes
+++ b/.gitattributes
@@ -271,10 +271,11 @@
 3rdparty/indi-nexstarevo/CMakeLists.txt -text
 3rdparty/indi-nexstarevo/NexStarAUXScope.cpp -text
 3rdparty/indi-nexstarevo/NexStarAUXScope.h -text
-3rdparty/indi-nexstarevo/README -text
+3rdparty/indi-nexstarevo/README.md -text
 3rdparty/indi-nexstarevo/indi_nexstarevo.xml -text
 3rdparty/indi-nexstarevo/nexstarevo.cpp -text
 3rdparty/indi-nexstarevo/nexstarevo.h -text
+3rdparty/indi-nexstarevo/run-gps-emulator -text
 3rdparty/indi-qhy/AUTHORS -text
 3rdparty/indi-qhy/CMakeLists.txt -text
 3rdparty/indi-qhy/INSTALL -text
