Switch to official Moravian Instruments library and update driver to match specific camera features

--- a/.gitattributes
+++ b/.gitattributes
@@ -260,13 +260,15 @@
 3rdparty/indi-mi/INSTALL -text
 3rdparty/indi-mi/README -text
 3rdparty/indi-mi/config.h.cmake -text
+3rdparty/indi-mi/gxccd.h -text
 3rdparty/indi-mi/indi_miccd.xml -text
-3rdparty/indi-mi/libmiccd32.bin -text
-3rdparty/indi-mi/libmiccd64.bin -text
-3rdparty/indi-mi/libmiccdarmv6.bin -text
+3rdparty/indi-mi/libgxccd32.bin -text
+3rdparty/indi-mi/libgxccd64.bin -text
+3rdparty/indi-mi/libgxccdarmv6.bin -text
+3rdparty/indi-mi/libgxccdarmv7.bin -text
+3rdparty/indi-mi/libgxccdarmv8.bin -text
 3rdparty/indi-mi/mi_ccd.cpp -text
 3rdparty/indi-mi/mi_ccd.h -text
-3rdparty/indi-mi/miccd.h -text
 3rdparty/indi-nexstarevo/CMakeLists.txt -text
 3rdparty/indi-nexstarevo/NexStarAUXScope.cpp -text
 3rdparty/indi-nexstarevo/NexStarAUXScope.h -text
