Fixing a few issues that were introduced in the last patch. Not everything is fixed yet but the code is better documented and it was restored to a better working conditon. All files are C++ now with DEBUG logging from INDI::Logger. Needs more testing especially for using mirror lock with remote release shutter.

--- a/.gitattributes
+++ b/.gitattributes
@@ -238,9 +238,9 @@
 3rdparty/indi-gphoto/config.h.cmake -text
 3rdparty/indi-gphoto/gphoto_ccd.cpp -text
 3rdparty/indi-gphoto/gphoto_ccd.h -text
-3rdparty/indi-gphoto/gphoto_driver.c -text
+3rdparty/indi-gphoto/gphoto_driver.cpp -text
 3rdparty/indi-gphoto/gphoto_driver.h -text
-3rdparty/indi-gphoto/gphoto_readimage.c -text
+3rdparty/indi-gphoto/gphoto_readimage.cpp -text
 3rdparty/indi-gphoto/gphoto_readimage.h -text
 3rdparty/indi-gphoto/indi_gphoto.xml -text
 3rdparty/indi-gpsd/CMakeLists.txt -text
