Latest QHY SDK update

--- a/.gitattributes
+++ b/.gitattributes
@@ -914,24 +914,36 @@
 3rdparty/libqhy/firmware/IMG2P.HEX -text
 3rdparty/libqhy/firmware/IMG2S.HEX -text
 3rdparty/libqhy/firmware/IMG50.HEX -text
+3rdparty/libqhy/firmware/POLEMASTER.HEX -text
 3rdparty/libqhy/firmware/QHY10.HEX -text
 3rdparty/libqhy/firmware/QHY11.HEX -text
 3rdparty/libqhy/firmware/QHY12.HEX -text
 3rdparty/libqhy/firmware/QHY15.HEX -text
 3rdparty/libqhy/firmware/QHY16.HEX -text
 3rdparty/libqhy/firmware/QHY16000.HEX -text
+3rdparty/libqhy/firmware/QHY160002AD.HEX -text
+3rdparty/libqhy/firmware/QHY163.img -text
+3rdparty/libqhy/firmware/QHY174.img -text
+3rdparty/libqhy/firmware/QHY178.img -text
 3rdparty/libqhy/firmware/QHY2.HEX -text
 3rdparty/libqhy/firmware/QHY20.HEX -text
 3rdparty/libqhy/firmware/QHY21.HEX -text
 3rdparty/libqhy/firmware/QHY22.HEX -text
+3rdparty/libqhy/firmware/QHY224.img -text
 3rdparty/libqhy/firmware/QHY23.HEX -text
 3rdparty/libqhy/firmware/QHY27.HEX -text
 3rdparty/libqhy/firmware/QHY28.HEX -text
 3rdparty/libqhy/firmware/QHY29.HEX -text
+3rdparty/libqhy/firmware/QHY290.img -text
 3rdparty/libqhy/firmware/QHY2E.HEX -text
 3rdparty/libqhy/firmware/QHY2PRO.HEX -text
 3rdparty/libqhy/firmware/QHY5.HEX -text
 3rdparty/libqhy/firmware/QHY5II.HEX -text
+3rdparty/libqhy/firmware/QHY5III174.img -text
+3rdparty/libqhy/firmware/QHY5III178.img -text
+3rdparty/libqhy/firmware/QHY5III185.img -text
+3rdparty/libqhy/firmware/QHY5III224.img -text
+3rdparty/libqhy/firmware/QHY5III290.img -text
 3rdparty/libqhy/firmware/QHY5LOADER.HEX -text
 3rdparty/libqhy/firmware/QHY6.HEX -text
 3rdparty/libqhy/firmware/QHY7.HEX -text
@@ -940,16 +952,13 @@
 3rdparty/libqhy/firmware/QHY8M.HEX -text
 3rdparty/libqhy/firmware/QHY8PRO.HEX -text
 3rdparty/libqhy/firmware/QHY9S.HEX -text
-3rdparty/libqhy/firmware/QHYA9.HEX -text
-3rdparty/libqhy/firmware/QHYAPS.HEX -text
 3rdparty/libqhy/firmware/miniCam5.HEX -text
 3rdparty/libqhy/libqhy.dylib -text
-3rdparty/libqhy/libqhy_32.bin -text
 3rdparty/libqhy/libqhy_32.dylib -text
-3rdparty/libqhy/libqhy_64.bin -text
 3rdparty/libqhy/libqhy_64.dylib -text
-3rdparty/libqhy/libqhy_arm_v6.bin -text
-3rdparty/libqhy/libqhy_arm_v7.bin -text
+3rdparty/libqhy/libqhy_armv6.bin -text
+3rdparty/libqhy/libqhy_x86_32.bin -text
+3rdparty/libqhy/libqhy_x86_64.bin -text
 3rdparty/libqhy/qhyccd.h -text
 3rdparty/libqhy/qhyccdcamdef.h -text
 3rdparty/libqhy/qhyccderr.h -text
