--- a/3rdparty/indi-aagcloudwatcher/CMakeLists.txt
+++ b/3rdparty/indi-aagcloudwatcher/CMakeLists.txt
@@ -3,7 +3,8 @@ PROJECT(aagcloudwatcher CXX C)
 
 set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
 
-set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/")
+LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
+LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/")
 
 set (VERSION_MAJOR 1)
 set (VERSION_MINOR 2)
