--- a/3rdparty/indi-duino/CMakeLists.txt
+++ b/3rdparty/indi-duino/CMakeLists.txt
@@ -2,7 +2,8 @@ cmake_minimum_required(VERSION 2.4.7)
 PROJECT(indi_duino CXX C)
 
 set(CMAKE_CXX_FLAGS "-std=c++0x ${CMAKE_CXX_FLAGS}")
-set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
+LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake_modules/")
+LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/../../cmake_modules/")
 set(FIRMATA_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/libfirmata/src/")
 set (VERSION_MAJOR 0)
 set (VERSION_MINOR 2)
